[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/boat.png" type="Texture" id=2]
[ext_resource path="res://player/Camera.gd" type="Script" id=3]
[ext_resource path="res://graphics/fish.png" type="Texture" id=4]
[ext_resource path="res://sfx/woosh.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/reel.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/meat.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/motor.ogg" type="AudioStream" id=8]
[ext_resource path="res://sfx/tear.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.2371, 4.983 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="boat" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="rod_end" type="Position2D" parent="."]
position = Vector2( -25.7629, 2.01717 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, 65 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
drag_margin_left = 0.6
drag_margin_right = 0.1
script = ExtResource( 3 )

[node name="FishLoad" type="Node2D" parent="."]
position = Vector2( -83.7629, -126.983 )

[node name="fish" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 130.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish2" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 124.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish3" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 118.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish4" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 112.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish5" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 106.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish6" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 100.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish7" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 94.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish8" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 88.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish9" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 82.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="fish10" type="Sprite" parent="FishLoad"]
visible = false
position = Vector2( 88.7629, 76.983 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2( -25, 1 )
shape = SubResource( 1 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Throw" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = 4.0
bus = "sound"

[node name="Reel" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -0.56
pitch_scale = 0.8
attenuation = 0.757858
bus = "sound"

[node name="Collect" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = 0.14

[node name="Motor" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )
autoplay = true

[node name="Tear" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -14.0
margin_top = -34.0
margin_right = 26.0
margin_bottom = -20.0

[node name="DistanceLabel" type="Label" parent="."]
visible = false
margin_left = -19.0
margin_top = -54.0
margin_right = 21.0
margin_bottom = -40.0

[connection signal="body_entered" from="CollectArea" to="." method="_on_CollectArea_body_entered"]
